devcore/less/nav.less
/*** HEADER ***/
header{
	position: absolute;
	width: 100%;
	z-index: 2;
}

/*** NAVIGATION ***/


	/** 3 BARS ICON **/

.toggle {

		float: right;
		margin-right:  10px; 
		display: block;
		padding: 0.6em 1em 0.6em 1em;

		> span {
			padding: 0.6em 1em 0.6em 1em;
			float: left;
		}
		
		/* ////// MENU ICON /////// */
		.menu-icon {
			cursor: pointer;
			height: 2.5em;
			width: 2.5em;
			float: left;
			position: relative;				
			&:hover {
				span {
					background: @menu-btn-over;
					&:before {
						background: @menu-btn-over;
					}
					&:after {
						background: @menu-btn-over;
					}
				}
			}
		}
		.menu-icon>span {	
			background-color: @menu-btn;
			border-radius: 3px;
			display: block;
			height: 0.25em;
			width: 100%;
			position: absolute;
			top: 50%;
			.transition(background-color .25s ease);

			&:before {
				
				background-color: @menu-btn;
				border-radius: 3px;
				content: "";
				height: 100%;
				width: 100%;
				position: absolute;
				transform: translateY(-0.75em);
				-webkit-transform: translateY(-0.75em);	
				.transition(background-color .10s ease);			
			}
			&:after {
				
				background-color: @menu-btn;
				border-radius: 3px;
				content: "";
				height: 100%;
				width: 100%;
				position: absolute;
				transform: translateY(0.75em);	
				-webkit-transform: translateY(0.75em);
				.transition(background-color .40s ease);			
			}
		}
	}

	/*** CLOSE BTN ****/

		.close-btn {
		  color: @menu-btn;
		  font: 3em/100% arial, sans-serif;
		  font-weight: 100;
		  position: absolute;
		  right: 30px;
		    top: 30px;
		  text-decoration: none;		
		  z-index: 11;
		  .transition(color .40s ease);	
		  &:hover {				
				color: @menu-btn-over;
			}
		}
		.close-btn:after {
			content: 'X'; /* ANSI X letter */
		}


	/* //////// FIXED OVERLAY MENU  ///////// */

		/* //// CONTENT WHILE MENU IS ACTIVE //// */

		.menu-over {	

			.transition(background-color .25s ease);	

			/* &:before, &:after {	
			background-color: @content-bg;
			position: fixed;
			z-index: 11;
			width: 100%;
			height: 100%;
			top: 0;
			left: 0;
			bottom: 0;
			.transition(background-color .25s ease);	
			clear: both;

			} */


			#over {
				background-color: @content-bg;
				position: fixed;
			z-index: 11;
			width: 100%;
			height: 100%;
			top: 0;
			left: 0;
			bottom: 0;
			display: block;
			clear: both;				

			}
		}


	/* //////// OVERLAYED MENU //////// */

	header.menu-fixed {

		.transition(opacity .5s ease);

		.inner {

		background: rgba(0,0,0, 0.70);
		position: fixed;
		height: 100%;
		width: 100%;
		z-index: 10;
		opacity: 0;		

		.container {
				max-width:  @menu-width;

			}		

		}	

		&.sidebar-is-active {
			z-index: -1;
			.transition(opacity .5s ease);	
			opacity: 0;
		}	    

		> .inner, .container, .row, nav {
			height: 100%;
		}

		.row {
			.display(flex);
			.justify-content(center);
			.align-items(center);
			margin: auto 0; 
			 -webkit-flex-direction: column;
   			flex-direction: column;

   			p {
				
				padding: 10%;
				color: @white;
			}

		}

		nav {
			.display(flex);
			.justify-content(center);
			.align-items(center);			
			width:  @menu-width;		
			max-height: @menu-width;
			min-height: @menu-width;	

			ul {
				
				.flex(0 3 auto);
				.align-self(center);	
				margin: 0 auto;
				color: @white;		
				
				a {
					padding: 10px;
					display: block;
					font-size: @menu-font-size;
					font-weight: 200;
					text-decoration: none; 
					color: @menu-font-color;					
				}					
			}			

			li {
				list-style: none;			
			}

		}	

	}

